# ec2-milvus-standalone

./: .dockerignore  .gitignore  create-milvus.sh  custom_milvus.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build_and_deploy.yml  deploy_milvus.yml
src/: hello_milvus.py  root_user.py  users.py  utils.py
terraform/: main.tf  outputs.tf  variables.tf
