[tool.poetry]
name = "qubika-bot"
version = "0.1.0"
description = "Serverless APIs for interacting with LLMs"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aws-lambda-powertools = "^2.4"
boto3 = "*"
pyyaml = "*"
langchain = "^0.0.343"
pydantic = "*"
pydantic-settings = "*"
langchain-core= "*"
shortuuid = "*"
openai = "*"
pyarrow = "*"
fastparquet = "*"
python-decouple = "*"
pymilvus="^2.3.6"
transformers = "*"
tiktoken = "*"

[tool.poetry.group.dev.dependencies]
autoflake = "1.3"
black = "22.3"
isort = "5.0.3"
pylint = "^2.6"
pytest = "6.2.5"
pytest-cov = "2.6.1"
Sphinx = "2.1.2"
ruff = "^0.1.5"
boto3-stubs = "*"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"